# Epitech-RType

./: .gitignore  CMakeLists.txt  README.md  test.cpp
.github/workflows/: ci.yml
client/: identifiable.cpp  init.cpp  main.cpp  world.cpp
client/components/: animation_component.cpp  audio_component.cpp  component.cpp  health_component.cpp  hitbox_component.cpp  position_component.cpp  render_component.cpp  rotation_component.cpp  scale_component.cpp  velocity_component.cpp
client/entities/: entity.cpp  indestructibleObstacle.cpp  monster.cpp  monsters.cpp  obstacle.cpp  player.cpp  powerup.cpp  projectile.cpp
client/systems/: animation_system.cpp  audio_system.cpp  background_system.cpp  health_system.cpp  hitbox_system.cpp  monsterSpawn_system.cpp  movement_system.cpp  render_system.cpp  system.cpp
client/utils/: background.cpp
docs/: Adding_features.md  server.md
includes/client/: identifiable.h  keyboard_manager.h  resource_manager.h  rtype.h  world.h
includes/client/components/: animation_component.h  audio_component.h  component.h  components.h  health_component.h  hitbox_component.h  position_component.h  render_component.h  rotation_component.h  scale_component.h  velocity_component.h
includes/client/entities/: entities.h  entity.h  indestructibleObstacle.h  monster.h  monsters.h  obstacle.h  player.h  powerup.h  projectile.h
includes/client/systems/: animation_system.h  audio_system.h  background_system.h  health_system.h  hitbox_system.h  monsterSpawn_system.h  movement_system.h  render_system.h  system.h  systems.h
includes/client/utils/: background.h
includes/lib/: enums.h  packet.h  random.h  structs.h
includes/server/: server.h
lib/: packet.cpp  random.cpp
server/: client.cpp  game.cpp  main.cpp  server.cpp
server/commands/: tcp.cpp  udp.cpp
